# Soccer-Tactics

./: .gitignore  LICENSE  README.md  pyproject.toml
legacy/data/: coords.csv
src/: Soccer-Tactics.py
src/soccer_tactics/: __init__.py  __main__.py  app.py  cli.py  constants.py  formations.py  io_utils.py  models.py  state.py
src/soccer_tactics/component/: __init__.py
src/soccer_tactics/component/frontend/: index.html
tests/: test_formations.py  test_models.py  test_state.py
